Updated deletePoll to remove deleted poll from list instead of reloading the page, fixed graph not showing on first dissplay

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -1,3 +1,9 @@
+.results {
+  visibility: hidden;
+}
+
+
+
 .thing-form {
     margin: 20px 0;
 }
